--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div style="display: flex; flex-direction:row;">
             <button class="ButtonT2" >remove</button>
         </div>
-        <img src="" />
+        <img src="" style=" width: 10%;height: 10%;"/>
         <div class="Editor" style="display: none; width: 100%; height: 20%; margin-top: 2%;   justify-content: center;">
             <input type="Edittext" id="inputTask23" class="inputT" placeholder="task"/>
             <button class="ButtonT2">Edit task</button>
